--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<div>this is a test.</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Daniel Carr's home page for WDD-230-03">
+    <title>Daniel Carr - Course Home Page - WDD 230-03</title>
+    <link href="css/main.css" rel="stylesheet">
+</head>
+<body>
+    <div id="content">
+        <header>
+            <div><img src="images\DanielCarrPic.jpg" alt="Headshot picture of Daniel Carr"></div>
+            <div>Daniel B. Carr</div>
+
+        </header>
+        <main>
+            <h1>WDD 230: Assignment Portal</h1>
+            <hr>
+            <ul>
+                <li><h2>Lesson 02: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 03: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 04: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 05: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 06: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 07: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 08: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 09: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 10: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 11: <a href="">Title</a></h2></li>
+                
+            </ul>
+            <hr>
+
+        </main>
+        <footer>
+            <div>&copy; <span></span> | Daniel B. Carr | Rexburg, ID, USA</div>
+            <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+
+        </footer>
+    </div>
+    <script src="js/main.js"></script> 
+</body>
+</html>
