--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="content">
         <header>
-            <div><img src="images\DanielCarrPic.jpg" alt="Headshot picture of Daniel Carr"></div>
+            <div><img src="images/DanielCarrPic.jpg" alt="Headshot picture of Daniel Carr"></div>
             <div>Daniel B. Carr</div>
 
         </header>
