design prinicple done?

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -16,26 +16,28 @@
         </header>
         <main>
             <section>
-                <div>White Space and Clean Design</div>
+                <div class="min_head">White Space and Clean Design</div>
                 <h3>Brandon Sanderson</h3>
                 <h4><a href="https://www.brandonsanderson.com/">Brandon Sanderson</a></h4>
-                <div><img></div>
-                <p></p>
+                <div class="card"><img class="img" src="images/Brandon.png" alt="Image of Brandon Sanderson website."></div>
+                <p>The website for Brandon Sanderson shows good white space or in this case black space by giving nice 
+                    boarders around each of its elements. However, as you scroll down on the phone sized website it starts to lose this white space.</p>
 
             </section>
             <section>
-                <div>PARC: Alignment</div>
-                <h3></h3>
-                <h4></h4>
-                <div><img></div>
-                <p></p>
+                <div class="min_head">PARC: Alignment</div>
+                <h3>D&D Beyond</h3>
+                <h4><a href="https://www.dndbeyond.com/">D&D Beyond</a></h4>
+                <div class="card"><img class="img" src="images/DnDBeyond.png" alt="Image of D&D Beyond website."></div>
+                <p>The D&D Beyond website align up these buttons that lead to different functions of the website. 
+                    While these are not straight lines they are over all straight and aligning them adds a clean view of the site.</p>
 
             </section>
             <section>
-                <div>PARC: Contrast</div>
+                <div class="min_head">PARC: Contrast</div>
                 <h3>Lego</h3>
                 <h4><a href="https://www.lego.com/en-us/categories/new-sets-and-products?icmp=HP-SHQL-EG-NO-new-116">Lego</a></h4>
-                <div><img></div>
+                <div class="card"><img class="img" src="images/lego.png" alt="Image of Lego website."></div>
                 <p>The website for lego demonstartes good contrast. They have a mostly white background with back text. 
                     There images also have a white background which draws out the colors.
                     Lastly they have splashes of yellow or orange with black text on them. </p>
