--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daniel Carr's design principles for WDD-230-03">
     <title>Daniel Carr - Design Principles Page - WDD 230-03</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/design-principles.css" rel="stylesheet">
 </head>
 <body>
