--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -8,6 +8,7 @@
     <title>Daniel Carr - Design Principles Page - WDD 230-03</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/design-principles.css" rel="stylesheet">
+    <script src="js/design-principles.js" defer></script>
 </head>
 <body>
     <div id="content">
@@ -53,7 +54,7 @@
         </footer>
 
     </div>
-    <script src="js/design-principles.js"></script> 
+     
     
 </body>
 </html>
