--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berk's Chamber of Commerce - Color Scheme</title>
+    <meta name="description" content="Berk's Chamber of Commerce Color Page">
+    <link href="F22\wdd230\css\normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" /></a>
+            <div>Berk's Chamber of Commerce</div>
+            <nav>
+                <div><a href="index.html">Home</a></div>
+                <div><a href="target-audience.html">Audience</a></div>
+                <div><a href="color-scheme.html">Color</a></div>
+                <div><a href="typography.html">Typography</a></div>
+            </nav>
+        </header>
+
+        <main>
+            <div id="content">
+                <h1>Color Scheme</h1>
+                <h2>Primary and Secondary</h2>
+                <p>This color scheme was generated with the help of the <a href="https://material.io/resources/color/#!/?view.left=0&view.right=0&primary.color=212121&secondary.color=B71C1C>"> Design Color Tool.</a></p>
+                <img src="images/colors.png" alt="Primary and secondary colors." />
+                <h2>Color Scheme Usage Example</h2>
+                <img src="images/color_example.png" alt="Example of primary and secondary colors in use." />
+            </div>
+
+        </main>
+
+        <footer>
+            <div>&copy; <span></span> | Daniel B. Carr | Rexburg, ID, USA</div>
+            <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+
+        </footer>
+    </div>
     
 </body>
 </html>
