--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berk's Chamber of Commerce - Home</title>
+    <meta name="description" content="Berk's Chamber of Commerce Home Page">
+    <link href="F22\wdd230\css\normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" /></a>
+            <p>Berk's Chamber of Commerce</p>
+            <nav>
+                <div><a href="index.html">Home</a></div>
+                <div><a href="target-audience.html">Audience</a></div>
+                <div><a href="color-scheme.html">Color</a></div>
+                <div><a href="typography.html">Typography</a></div>
+            </nav>
+        </header>
+
+        <main>
+            <div id="content">
+                <h1>Site Plan</h1>
+                <h2>Site Name and Domain</h2>
+                <p>The name of the website is: Berk's Chamber of Commerce, and its domain is: berkschamberofcommerce.com</p>
+                <h2>Site Purpose</h2>
+                <p>
+                    The purpose of this site is to centralize and standerize the trade of Berk with its new aquasision of dragons.
+                    While dragons in the past have been a detrament to trade, with their taming it opens up brand new oppertunites 
+                    for new wealth. As such this site plans to list possible ocupations and goods that should stay within Berk and 
+                    several that we can export out of Berk.
+                 </p>
+            </div>
+
+        </main>
+
+        <footer>
+            <div>&copy; <span></span> | Daniel B. Carr | Rexburg, ID, USA</div>
+            <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+
+        </footer>
+
+    </div>
     
 </body>
 </html>
