--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berk's Chamber of Commerce - Target Audience</title>
+    <meta name="description" content="Berk's Chamber of Commerce Audience Page">
+    <link href="F22\wdd230\css\normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/main.js" defer></script>
+
 </head>
 <body>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" /></a>
+            <div>Berk's Chamber of Commerce</div>
+            <nav>
+                <div><a href="index.html">Home</a></div>
+                <div><a href="target-audience.html">Audience</a></div>
+                <div><a href="color-scheme.html">Color</a></div>
+                <div><a href="typography.html">Typography</a></div>
+            </nav>
+        </header>
+
+        <main>
+            <h1>Target Audience</h1>
+            <h2>Personas</h2>
+            <p></p>
+            <h2>Scenarios</h2>
+            <p></p>
+
+        </main>
+
+        <footer>
+            <div>&copy; <span></span> | Daniel B. Carr | Rexburg, ID, USA</div>
+            <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+
+        </footer>
+    </div>
     
 </body>
 </html>
