--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berk's Chamber of Commerce - Typography</title>
+    <meta name="description" content="Berk's Chamber of Commerce Typography Page">
+    <link href="F22\wdd230\css\normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" /></a>
+            <div>Berk's Chamber of Commerce</div>
+            <nav>
+                <div><a href="index.html">Home</a></div>
+                <div><a href="target-audience.html">Audience</a></div>
+                <div><a href="color-scheme.html">Color</a></div>
+                <div><a href="typography.html">Typography</a></div>
+            </nav>
+        </header>
+
+        <main>
+            <h1>Fonts</h1>
+            <table>
+                <tr>
+                  <th>Object</th>
+                  <th>Font Definition</th>
+                  <th>Size</th>
+                  <th>Font Color</th>
+                </tr>
+                <tr>
+                  <td>Site Header</td>
+                  <td>Maria Anders</td>
+                  <td>Germany</td>
+                  <td>White</td>
+                </tr>
+                <tr>
+                  <td>Primary Navigation</td>
+                  <td>Francisco Chang</td>
+                  <td>Mexico</td>
+                  <td>Dark red</td>
+                </tr>
+                <tr>
+                    <td>Footer Content</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                    <td>White</td>
+                </tr>
+                <tr>
+                    <td>Heading 1 (h1)</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                    <td>Light red</td>
+                </tr>
+                <tr>
+                    <td>Heading 2 (h2)</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                    <td>Light red</td>
+                </tr>
+              </table>
+
+        </main>
+
+        <footer>
+            <div>&copy; <span></span> | Daniel B. Carr | Rexburg, ID, USA</div>
+            <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+
+        </footer>
+    </div>
     
 </body>
 </html>
