--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -26,10 +26,31 @@
 
         <main>
             <h1>Target Audience</h1>
+            <p>The target audience is citizens of Berk looking to make money. With a secondary audience of those looking to come to 
+                Berk to trade or sell their goods.
+            </p>
             <h2>Personas</h2>
-            <p></p>
+            <h4>Biorn Larson</h4>
+            <p>
+                Biorn is a forty five year old male looking to start a bussiness selling dragon carved sculptures. His motive for using 
+                the site is to figure out if he can export these works of art and how to best start his bussiness.
+            </p>
+            <h4>Greta Hofferson</h4>
+            <p>
+                Greta is a twenty one year old female looking to come to Berk to expeiance tamed dragons. Her motive for using the site
+                is to find when the next festival is and what goods she could buy while she is there.
+            </p>
+
             <h2>Scenarios</h2>
-            <p></p>
+            <div>
+                <ol>
+                    <li>How can I start a bussiness and what are some good ideas for a bussiness?</li>
+                    <li>What goods can be exported from Berk?</li>
+                    <li>How can I promote my bussiness?</li>
+                    <li>What shops are in Berk?</li>
+                    <li>When is the next market festival?</li>
+                </ol>
+            </div>
 
         </main>
 
