--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -34,32 +34,32 @@
                 </tr>
                 <tr>
                   <td>Site Header</td>
-                  <td>Maria Anders</td>
-                  <td>Germany</td>
+                  <td>Abyssinica SIL</td>
+                  <td>36pt</td>
                   <td>White</td>
                 </tr>
                 <tr>
                   <td>Primary Navigation</td>
-                  <td>Francisco Chang</td>
-                  <td>Mexico</td>
-                  <td>Dark red</td>
+                  <td>Abyssinica SIL</td>
+                  <td>24pt</td>
+                  <td>White</td>
                 </tr>
                 <tr>
                     <td>Footer Content</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td>Abyssinica SIL</td>
+                    <td>16pt</td>
                     <td>White</td>
                 </tr>
                 <tr>
                     <td>Heading 1 (h1)</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td>Abyssinica SIL</td>
+                    <td>24pt</td>
                     <td>Light red</td>
                 </tr>
                 <tr>
                     <td>Heading 2 (h2)</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td>Abyssinica SIL</td>
+                    <td>16pt</td>
                     <td>Light red</td>
                 </tr>
               </table>
