--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -11,7 +11,7 @@
     <script src="js/design-principles.js" defer></script>
 </head>
 <body>
-    <div id="content">
+    <div class="content">
         <header>
             <h1>Design Principles Document</h1>
             <h2>Daniel B. Carr</h2>
