--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berk's Chamber of Commerce - Home</title>
     <meta name="description" content="Berk's Chamber of Commerce Home Page">
-    <link href="F22\wdd230\css\normalize.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <script src="js/main.js" defer></script>
 </head>
 <body>
-    <div id="content">
+    <div class="content">
         <header>
-            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" /></a>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" />
+            </a>
             <p>Berk's Chamber of Commerce</p>
             <nav>
                 <div><a href="index.html">Home</a></div>
