--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="content">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" />
+            <a id="logo_link" href="index.html" >
+                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" >
             </a>
             <p>Berk's Chamber of Commerce</p>
             <nav>
