--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -14,7 +14,7 @@
     <div class="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" />
+                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" >
             </a>
             <div>Berk's Chamber of Commerce</div>
             <nav>
