--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berk's Chamber of Commerce - Home</title>
-    <meta name="description" content="Berk's Chamber of Commerce Home Page">
+    <title>Berk's Chamber of Commerce - Sitemap Home</title>
+    <meta name="description" content="Berk's Chamber of Commerce Sitemap Home Page">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <script src="js/main.js" defer></script>
