--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,20 +13,78 @@
 <body>
     <div class="content">
         <header>
+            <a id="logo_link" href="index.html" >
+                <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" >
+            </a>
+            <h1>Berk's Chamber of Commerce</h1>
             <nav>
-                <button id="hamburger"><span>&equiv;</span><span>X</span></button>
-                <ul id="navbar">
-                    <
+                <button id="hambugerBtn"><span>&equiv;</span><span>X</span></button>
+                <ul id="primaryNav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Directory</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon" />
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon" />
+                </a>
+                </div>
+            <div id="date">
+                <span></span>
+            </div>
         </header>
 
-        <body>
+        <main>
+            <div class="hero">
+                <h2>Hero with site name and call to action</h2>
+            </div>
+            <div class="event">
+                <h2>Event</h2>
+            </div>
+            <div class="weather">
+                <h2>Weather</h2>
+            </div>
+            <div class="news">
+                <h2>News Release</h2>
+            </div>
+            <div class="spotlight">
+                <div class="s1">
+                    <h2>Spotlight 1</h2>
+                </div>
+                <div class="s2">
+                    <h2>Spotlight 2</h2>
+                </div>
+                <div class="s3">
+                    <h2>Spotlight 3</h2>
+                </div>
+            </div>
 
-        </body>
+        </main>
 
         <footer>
-
+            <div class="foot_img"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" ></div>
+            <h3>Berk Chamber of Commerce</h3>
+            <div class="address">
+                <p>234 Stroker Way</p>
+                <p>Berk, North Empire 00001</p>
+            </div>
+            <div class="contact">
+                <p>Commerce@Berk.gov</p>
+                <p>+(306) 475-3686</p>
+                <p><a href="https://www.google.com/maps/@78.0594692,14.2227333,3282m/data=!3m1!1e3">Location Map</a></p>
+            </div>
+            <div><hr></div>
+            <div class="info">
+                <div>&copy; <span></span> Berk Chamber </div>
+                <div>Daniel B. Carr</div>
+                <div>WDD230 Project</div>
+                <div id="datediv">Last Updated: <span id="lastupdatedate"></span></div>
+            </div>
         </footer>
 
     </div>
