--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="content">
         <header>
-            <a id="logo_link" href="index.html" >
+            <a class="hl" id="logo_link" href="index.html" >
                 <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" >
             </a>
-            <h1>Berk's Chamber of Commerce</h1>
-            <nav>
+            <h1 class="ht">Berk's Chamber of Commerce</h1>
+            <nav class="hn">
                 <button id="hambugerBtn"><span>&equiv;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li class="active"><a href="#">Home</a></li>
@@ -28,13 +28,13 @@
             </nav>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon" />
+                    <img class="simg" src="images/facebook.png" alt="fb icon" />
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon" />
+                    <img class="simg" src="images/twitter.png" alt="twitter icon" />
                 </a>
                 </div>
-            <div id="date">
+            <div class="date" id="date">
                 <span></span>
             </div>
         </header>
@@ -63,22 +63,28 @@
                     <h2>Spotlight 3</h2>
                 </div>
             </div>
+            <div class="join">
+                <h2>Join</h2>
+            </div>
 
         </main>
 
         <footer>
-            <div class="foot_img"><img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" ></div>
-            <h3>Berk Chamber of Commerce</h3>
-            <div class="address">
-                <p>234 Stroker Way</p>
-                <p>Berk, North Empire 00001</p>
+            <div class="f1">
+                <div class="foot_img"><img class="flogo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" ></div>
+            
+                <div class="address">
+                    <h3>Berk Chamber of Commerce</h3>
+                    <p>234 Stroker Way</p>
+                    <p>Berk, North Empire 00001</p>
+                </div>
+                <div class="contact">
+                    <p>Commerce@Berk.gov</p>
+                    <p>+(306) 475-3686</p>
+                    <p><a href="https://www.google.com/maps/@78.0594692,14.2227333,3282m/data=!3m1!1e3">Location Map</a></p>
+                </div>
             </div>
-            <div class="contact">
-                <p>Commerce@Berk.gov</p>
-                <p>+(306) 475-3686</p>
-                <p><a href="https://www.google.com/maps/@78.0594692,14.2227333,3282m/data=!3m1!1e3">Location Map</a></p>
-            </div>
-            <div><hr></div>
+            <div class="fl"><hr></div>
             <div class="info">
                 <div>&copy; <span></span> Berk Chamber </div>
                 <div>Daniel B. Carr</div>
