--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,10 +28,10 @@
             </nav>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img class="simg" src="images/facebook.png" alt="fb icon" />
+                    <img class="simg" src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img class="simg" src="images/twitter.png" alt="twitter icon" />
+                    <img class="simg" src="images/twitter.png" alt="twitter icon">
                 </a>
                 </div>
             <div class="date" id="date">
