--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berk's Chamber of Commerce - Home</title>
     <meta name="description" content="Berk's Chamber of Commerce Home Page">
+    <link rel="shortcut icon" href="images/logo_favicon.png">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
     <script src="js/base.js" defer></script>
@@ -16,6 +17,7 @@
 <body>
     <div class="content">
         <header>
+            <p class="mesg">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
             <a class="hl" id="logo_link" href="index.html" >
                 <img class="logo" src="images/logo.png" alt="Berk's Chamber of Commerce Logo" >
             </a>
@@ -85,7 +87,7 @@
                     <p>Commerce@Berk.gov</p>
                     <p>+(306) 475-3686</p>
                     <p><a href="https://www.google.com/maps/@78.0594692,14.2227333,3282m/data=!3m1!1e3">Location Map</a></p>
-                </div>
+                </div> 
             </div>
             <div class="fl"><hr></div>
             <div class="info">
