--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,30 +46,58 @@
 
         <main>
             <div class="hero">
-                <h2>Hero with site name and call to action</h2>
+                <h2 class="title h">Welcome to Berk</h2>
+                <img class="village" src="images/viking village.jfif">
+                <a href="#" class="herobtn">Join the Chamber</a>
             </div>
             <div class="event">
-                <h2>Event</h2>
+                <h2 class="title">Dragon Races</h2>
+                <p>Join us the first Saturday of every month for dragon races starting at 10:00 a.m.  </p>
             </div>
             <div class="weather">
-                <h2>Weather</h2>
+                <h2 class="title">Weather</h2>
+                <img class="w" src="images/partly_cloudy.png" alt="Partly Cloudy">
+                <div class="temp">33°F</div>
+                <h3 class="wf">Partly Cloudy</h3>
+                <p class="ws1">Wind Speed:</p>
+                <p class="ws2">3 m/h</p>
+                <p class="wc1">Wind Chill:</p>
+                <p class="wc2">-2°F</p>
+
             </div>
             <div class="news">
-                <h2>News Release</h2>
+                <h2 class="title">News Release</h2>
+                <p>The Fall Harvest Festival will be on November twentieth to the twenty sixth. 
+                    There will be food and drink, fun and games for the whole family, competitions, raffle prizes, and more. 
+                    Entry is free but individual events may cost money. If you would like to set up a stall or stand for your 
+                    business contact Erik Erikson at Commerce.Erikson@Berk.gov.</p>
             </div>
             <div class="spotlight">
                 <div class="s1">
-                    <h2>Spotlight 1</h2>
+                    <h2 class="title">Gobberʼs Forge</h2>
+                    <img class="si" src="images/gobber_forge.png" alt="Gobber's Forge logo">
+                    <h3>Greatest forge in the archipelago!</h3>
+                    <hr>
+                    <p>Contact@gobberforge.com</p>
                 </div>
                 <div class="s2">
-                    <h2>Spotlight 2</h2>
+                    <h2 class="title">Stately Saddles</h2>
+                    <img class="si" src="images/stately_saddles.png" alt="Stately Saddles logo">
+                    <h3>Any saddle you can imagine, we can make it.</h3>
+                    <hr>
+                    <p>build@statelysaddles.com</p>
                 </div>
                 <div class="s3">
-                    <h2>Spotlight 3</h2>
+                    <h2 class="title">Hofferson Mills</h2>
+                    <img class="si" src="images/hofferson_mills.png" alt="Hofferson Mills logo">
+                    <h3>Best baking flower around.</h3>
+                    <hr>
+                    <p>order@hoffersonmills.com</p>
                 </div>
             </div>
             <div class="join">
-                <h2>Join</h2>
+                <a href="#" class="joinbtn"><h2 class="joint">Join</h2></a>
+                <p>Discover how to join Berkʼs Chamber of Commerce today and how it will benefit your business.</p>
             </div>
 
         </main>
