--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
 
         <main>
             <div class="hero">
-                <h2 class="title h">Welcome to Berk</h2>
+                <h2 class="herot">Welcome to Berk</h2>
                 <img class="village" src="images/viking village.jfif">
                 <a href="#" class="herobtn">Join the Chamber</a>
             </div>
