alt and hero img

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
         <main>
             <div class="hero">
                 <h2 class="herot">Welcome to Berk</h2>
-                <img class="village" src="images/viking village.jfif">
+                <img class="village" src="images/viking village.jfif" alt="Viking style building">
                 <a href="#" class="herobtn">Join the Chamber</a>
             </div>
             <div class="event">
