--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,8 +47,8 @@
         <main>
             <div class="hero">
                 <h2 class="herot">Welcome to Berk</h2>
-                <img class="village" src="images/viking village.jfif" alt="Viking style building">
-                <a href="#" class="herobtn">Join the Chamber</a>
+                <img class="village" src="images/viking_village.jfif" alt="Viking style building">
+                <p class="herobtn">Join the Chamber</p>
             </div>
             <div class="event">
                 <h2 class="title">Dragon Races</h2>
