--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><h2>Lesson 04: <a href="https://dcpenguin73.github.io/wdd230/chamber/">Berk Chamber of Commerce</a></h2></li>
                 <li><h2>Lesson 05: <a href="https://dcpenguin73.github.io/wdd230/chamber/">Berk Chamber of Commerce</a></h2></li>
                 <li><h2>Lesson 06: <a href="">Title</a></h2></li>
-                <li><h2>Lesson 07: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 07: <a href="https://dcpenguin73.github.io/wdd230/lesson7/lazyload">Lazyload</a></h2></li>
                 <li><h2>Lesson 08: <a href="">Title</a></h2></li>
                 <li><h2>Lesson 09: <a href="">Title</a></h2></li>
                 <li><h2>Lesson 10: <a href="">Title</a></h2></li>
