--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
                 <button id="hambugerBtn"><span>&equiv;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a href="https://dcpenguin73.github.io/wdd230/chamber/discover.html">Directory</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
