--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,9 +27,9 @@
                 <button id="hambugerBtn"><span>&equiv;</span><span>X</span></button>
                 <ul id="primaryNav">
                     <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="#">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
+                    <liclass="active"><a href="#">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
