--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,9 +26,9 @@
             <nav class="hn">
                 <button id="hambugerBtn"><span>&equiv;</span><span>X</span></button>
                 <ul id="primaryNav">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
