--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,9 +64,9 @@
             <div class="weather">
                 <h2 class="title">Weather</h2>
                 <img class="w" src="images/partly_cloudy.png" alt="Partly Cloudy">
-                <div class="temp"><span id="tem">33</span>°F</div>
-                <h3 class="wf">Partly Cloudy</h3>
-                <p class="ws1">Wind Speed: <span class="ws2" id = "windspeed">5</span>mph</p>
+                <div class="temp"><span id="tem"></span>°F</div>
+                <h3 class="wf"></h3>
+                <p class="ws1">Wind Speed: <span class="ws2" id = "windspeed"></span>mph</p>
                 <p class="wc1">Wind Chill: <span class="wc2" id = "windchill"></span></p>
 
             </div>
