--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -67,6 +67,24 @@
                         </li>
                     </ul>
                 </form>
+                
+                <h3>
+                    Board of Directors
+                </h3>
+                <section class="board">
+                    <div>
+                        <h4>Fergus Fishlegs</h4>
+                        <img src="images/stoickson.jpg" alt="Fergus Fishlegs">
+                    </div>
+                    <div>
+                        <h4>Heather Sigurdson</h4>
+                        <img src="images/Heather.jpg" alt="Heather Sigurdson">
+                    </div>
+                    <div>
+                        <h4>Stoickson Haddock</h4>
+                        <img src="images/Fergus.jpg" alt="Stoickson Haddock">
+                    </div>
+                </section>
 
         </main>
 
