--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,8 +49,8 @@
         <main class="direcmain">
             <section id="bizheader">
                 <h1>Business Directory</h1>
-                <img src="images/grid.png" id="cardselect">
-                <img src="images/list.webp" id="listselect">
+                <img src="images/grid2.png" id="cardselect">
+                <img src="images/list2.webp" id="listselect">
             </section> 
             <section id="cardview">
             </section>
