--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,9 +50,9 @@
             <div class="hero">
                 <h2 class="herot">Welcome to Berk</h2>
                 <picture class="village">
-                    <source class="heroimg" srcset="images/wdd230-org-medium.webP" media="(min-width: 560px) and (max-width: 1499px)">
-                    <source class="heroimg" srcset="images/wdd230-org-large.webP" media="(min-width: 1500px)">
-                    <img class="heroimg" src="images/wdd230-org-small.webP" alt="group of people">
+                    <source class="heroimg" srcset="images/viking_village_medium.webp" media="(min-width: 560px) and (max-width: 1499px)">
+                    <source class="heroimg" srcset="images/viking_village_large.webp" media="(min-width: 1500px)">
+                    <img class="heroimg" src="images/viking_village_small.webp" alt="Viking style building">
                 </picture>
                 <!-- <img class="village" src="images/viking_village.jfif" alt="Viking style building"> -->
                 <p class="herobtn">Join the Chamber</p>
