--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li><h2>Lesson 05: <a href="https://dcpenguin73.github.io/wdd230/chamber/">Berk Chamber of Commerce</a></h2></li>
                 <li><h2>Lesson 06: <a href="https://dcpenguin73.github.io/wdd230/lesson7/lazyload">Lazyload</a></h2></li>
                 <li><h2>Lesson 07: <a href="https://dcpenguin73.github.io/wdd230/chamber/discover.html">Discover</a></h2></li>
-                <li><h2>Lesson 08: <a href="">Title</a></h2></li>
-                <li><h2>Lesson 09: <a href="">Title</a></h2></li>
-                <li><h2>Lesson 10: <a href="">Title</a></h2></li>
-                <li><h2>Lesson 11: <a href="">Title</a></h2></li>
+                <li><h2>Lesson 08: <a href="https://dcpenguin73.github.io/wdd230/lesson8/tablebuild.html">Table</a></h2></li>
+                <li><h2>Lesson 09: <a href="https://dcpenguin73.github.io/wdd230/lesson9/prophets.html">Prophets</a></h2></li>
+                <li><h2>Lesson 10: <a href="https://dcpenguin73.github.io/wdd230/lesson10/weather-api.html">Weather</a></h2></li>
+                <li><h2>Final: <a href="">Final</a></h2></li>
                 
             </ul>
             <hr>
