--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><h2>Lesson 02: <a href="https://dcpenguin73.github.io/wdd230/lesson2/design-principles">Design Principles</a></h2></li>
                 <li><h2>Lesson 03: <a href="https://dcpenguin73.github.io/wdd230/lesson3/">Website Planning Document</a></h2></li>
                 <li><h2>Lesson 04: <a href="https://dcpenguin73.github.io/wdd230/chamber/">Berk Chamber of Commerce</a></h2></li>
-                <li><h2>Lesson 05: <a href="https://dcpenguin73.github.io/wdd230/chamber/">Berk Chamber of Commerce</a></h2></li>
+                <li><h2>Lesson 05: <a href="https://dcpenguin73.github.io/wdd230/lesson5/bom.html">Bom</a></h2></li>
                 <li><h2>Lesson 06: <a href="https://dcpenguin73.github.io/wdd230/lesson7/lazyload">Lazyload</a></h2></li>
                 <li><h2>Lesson 07: <a href="https://dcpenguin73.github.io/wdd230/chamber/discover.html">Discover</a></h2></li>
                 <li><h2>Lesson 08: <a href="https://dcpenguin73.github.io/wdd230/lesson8/tablebuild.html">Table</a></h2></li>
