--- a/final plan/index.html
+++ b/final plan/index.html
@@ -7,6 +7,9 @@
     <title>final siteplan</title>
     <meta name="description" content="final siteplan Page">
     <link href="css/normalize.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
 </head>
 <body>
     <h1>Planning Doc</h1>
@@ -34,8 +37,11 @@
     </div>
     <div>
         <h2>Typography</h2>
+        <h3>
+            For heading, the sites will use Audiowide font
+        </h3>
         <p>
-            
+            For all other text, the site will use Times New Roman font
         </p>
     </div>
     <div>
