--- a/final plan/localSorage.html
+++ b/final plan/localSorage.html
@@ -7,6 +7,6 @@
     <title>local storiage</title>
 </head>
 <body>
-    <input class="mycheck" id="check-temple1" type="checkbox"
+    <input class="mycheck" id="check-temple1" type="checkbox">
 </body>
 </html>
