--- a/final plan/localSorage.html
+++ b/final plan/localSorage.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>local storiage</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <input class="mycheck" id="check-temple1" type="checkbox">
+
+    <section> 
+        <h3>Products</h3>
+          <ul class="products">
+            <li>UGA-19 - <a href="products/?d=uga19">Details</a></li>
+            <li>RGX-13 - <a href="products/?d=rgx13">Details</a></li>
+            <li>BAB-33 - <a href="products/?d=bab33">Details</a></li>
+            <li>BAB-44 - <a href="products/?d=bab44">Details</a></li>
+            <li>ACD-02 - <a href="products/?d=acd02">Details</a></li>
+          </ul>
+      </section>
+
+
 </body>
 </html>
