--- a/final/thanks.html
+++ b/final/thanks.html
@@ -40,8 +40,12 @@
             </nav>
         </header>
 
-        <main id="home">
-
+        <main id="thanks">
+            <div id="text">
+                <h2>Thank You For Your Purchase!</h2>
+                <p>Your books should arrive in seven to fourteen bussiness days, unless you ordered an electronic copy in 
+                    which case you should receive an email with it in two days.</p>
+            </div>
         </main>
 
         <footer>
